--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
          </select>
       </div>
       <div class="design-site">
-         <h3>Тип сайта</h3>
+         <h3>Дизайн</h3>
          <select name="design-list" id="design">
             <option value="">Выберите пункт...</option>
             <option value="3">Тип1</option>
@@ -114,7 +114,7 @@
          </select>
       </div>
       <div class="adaptability-site">
-         <h3>Тип сайта</h3>
+         <h3>Адаптивность</h3>
          <select name="adaptability-list" id="adaptability">
             <option value="">Выберите пункт...</option>
             <option value="5">Тип1</option>
@@ -209,7 +209,7 @@
          <ul>
             <li><a class="social-icons-fasebook" href="#" alt="fasebook">картинка</a></li>
             <li><a class="social-icons-twitter" href="#" alt="twitter">картинка</a></li>
-            <li><a class="social-icons--???" href="#" alt="???">картинка</a></li>
+            <li><a class="social-icons-dribbble" href="#" alt="dribbble">картинка</a></li>
             <li><a class="social-icons-github" href="#" alt="github">картинка</a></li>
             <li><a class="social-icons-instagram" href="#" alt="instagram">картинка</a></li>
             <li><a class="social-icons-LinkedIn" href="#" alt="LinkedIn">картинка</a></li>
