--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Андрей Браун - Веб-разработчик</title>
+   <link rel="stylesheet" href="css/reset.css">
+   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -14,12 +16,12 @@
          <div class="logo">Андрей Браун</div>
          <div class="menu">
             <ul>
-               <li>Обо мне</li>
-               <li>Услуги</li>
-               <li>Кейсы</li>
-               <li>Прайс</li>
-               <li>Отзывы</li>
-               <li>Контакты</li>
+               <li>обо мне</li>
+               <li>услуги</li>
+               <li>кейсы</li>
+               <li>прайс</li>
+               <li>отзывы</li>
+               <li>контакты</li>
             </ul>
          </div>
       </nav>
@@ -34,66 +36,79 @@
    </div>
    <div class="aboutme__container">
       <h2>Обо мне</h2>
-      <img class="aboutme__my-photo" src="#" alt="Мое фото">
+      <div class="line"></div>
+      <img class="aboutme__my-photo" src="img/foto_103.png" alt="Мое фото">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo
          nibh ante
          facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo
          nibh ante
          facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-      <input type="submit" value="Скачать резюме">
+      <div class="aboutme__submit">
+         <img src="img/ikonka_102.png" alt="*">
+         <input type="submit" value="Скачать резюме">
+      </div>
    </div>
    <div class="skills__container">
       <h2>Что я умею</h2>
-      <div class="skills">
-         <img class="icon" src="#" alt="Ноутбук">
-         <h4>Веб-дизайн</h4>
-         <p>Lorem ipsum dolor sit amet placerat
-            facilisis felis mi in tempus eleifend
-            pellentesque natoque etiam.</p>
-      </div>
-      <div class="skills">
-         <img class="icon" src="#" alt="Скобки">
-         <h4>Разработка</h4>
-         <p>Lorem ipsum dolor sit amet placerat
-            facilisis felis mi in tempus eleifend
-            pellentesque natoque etiam.</p>
-      </div>
-      <div class="skills">
-         <img class="icon" src="#" alt="Ракета">
-         <h4>СЕО-Оптимизация</h4>
-         <p>Lorem ipsum dolor sit amet placerat
-            facilisis felis mi in tempus eleifend
-            pellentesque natoque etiam.</p>
-      </div>
-      <div class="skills">
-         <img class="icon" src="#" alt="Рупор">
-         <h4>Маркетинг</h4>
-         <p>Lorem ipsum dolor sit amet placerat
-            facilisis felis mi in tempus eleifend
-            pellentesque natoque etiam.</p>
+      <div class="line"></div>
+      <div class="skills__item">
+         <div class="skills">
+            <img class="icon1" src="img/nout_82.png" alt="Ноутбук">
+            <h4>Веб-дизайн</h4>
+            <p>Lorem ipsum dolor sit amet placerat
+               facilisis felis mi in tempus eleifend
+               pellentesque natoque etiam.</p>
+         </div>
+         <div class="skills">
+            <img class="icon2" src="img/znak_83.png" alt="Скобки">
+            <h4>Разработка</h4>
+            <p>Lorem ipsum dolor sit amet placerat
+               facilisis felis mi in tempus eleifend
+               pellentesque.</p>
+         </div>
+         <div class="skills">
+            <img class="icon3" src="img/raketa_84.png" alt="Ракета">
+            <h4>СЕО-Оптимизация</h4>
+            <p>Lorem ipsum dolor sit amet placerat
+               facilisis felis mi in tempus eleifend
+               pellentesque natoque.</p>
+         </div>
+         <div class="skills">
+            <img class="icon4" src="img/grammofon_85.png" alt="Рупор">
+            <h4>Маркетинг</h4>
+            <p>Lorem ipsum dolor sit amet placerat
+               facilisis felis mi in tempus eleifend
+               pellentesque natoque etiam.</p>
+         </div>
       </div>
    </div>
    <div class="cases__container">
       <h2>Кейсы</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante facilisis.</p>
+      <div class="line"></div>
+      <p class="cases__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante
+         facilisis.</p>
       <div class="cases__image">
-         <div class="cases__client">
-         <h4>Client</h4>
-         <p>Какая-то компания</p>
+         <div class="cases__img">
+            <img src="img/fotka_260.jpg" alt="Пример работы">
          </div>
-         <div class="cases-website">
-            <h4>Website</h4>
-            <a href="#">Ссылка</a>
-         </div>
-         <div class="cases__name-project">
-            <h4>Название проекта</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna
+         <div class="client">
+            <div class="cases__client">
+               <h4>Client:</h4>
+               <p>Какая-то компания</p>
+               <h4>Website:</h4>
+               <a href="#" target="_blank">http://www.somedomain.com</a>
+            </div>
+            <div class="cases__name-project">
+               <h4>Название проекта</h4>
+               <p class="text__name-project">Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna
                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+               </p>
+            </div>
          </div>
-         <input type="submit" value="Visit live site">
       </div>
+      <input type="submit" value="Visit live site">
    </div>
    <div class="cost-calculation__container">
       <h2>Расчет стоимости</h2>
@@ -121,98 +136,89 @@
             <option value="6">Тип2</option>
          </select>
       </div>
+      <hr>
       <div class="timing">
-         <p>Сроки</p>
+         <p>Сроки 0</p>
       </div>
       <div class="cost">
-         <p>Стоимость</p>
+         <p>Стоимость 0</p>
       </div>
    </div>
    <div class="statistics__container">
       <h2>Немного статистики</h2>
+      <div class="line"></div>
       <div class="stats">
-         <img class="icon2" src="#" alt="Смайл">
-         <h4>120</h4>
-         <p>Счастливых клиентов</p>
-      </div>
-      <div class="stats">
-         <img class="icon2" src="#" alt="Скобки">
-         <h4>4,600</h4>
-         <p>Часов работы</p>
-      </div>
-      <div class="stats">
-         <img class="icon2" src="#" alt="Галка">
-         <h4>340</h4>
-         <p>Проектов завершено</p>
-      </div>
-      <div class="stats">
-         <img class="icon2" src="#" alt="Кубок">
-         <h4>23</h4>
-         <p>Наград получено</p>
+         <div class="stats__item">
+            <img class="icon21" src="img/smayl_157.png" alt="Смайл">
+            <h4>120</h4>
+            <p>Счастливых клиентов</p>
+         </div>
+         <div class="stats__item">
+            <img class="icon22" src="img/skobki_158.png" alt="Скобки">
+            <h4>4,600</h4>
+            <p>Часов работы</p>
+         </div>
+         <div class="stats__item">
+            <img class="icon23" src="img/galochka_159.png" alt="Галка">
+            <h4>340</h4>
+            <p>Проектов завершено</p>
+         </div>
+         <div class="stats__item">
+            <img class="icon24" src="img/kubok_160.png" alt="Кубок">
+            <h4>23</h4>
+            <p>Наград получено</p>
+         </div>
       </div>
    </div>
    <div class="reviews__container">
       <h2>Отзывы</h2>
+      <div class="line"></div>
       <div class="reviews1">
-         <img src="#" alt="Фото автора">
+         <img src="img/fotka_236.png" alt="Фото автора">
          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh
             ante
             facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
-         <address>Михаил, Ген директор ПАО “Газпром”.</address>
+         <address><span>Михаил</span>, Ген директор ПАО “Газпром”.</address>
       </div>
-      <div class="reviews2">
-         <img src="#" alt="Фото автора">
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh
-            ante
-            facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
-         <address>Михаил, Ген директор ПАО “Газпром”.</address>
-      </div>
-      <div class="reviews3">
-         <img src="#" alt="Фото автора">
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh
-            ante
-            facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
-         <address>Михаил, Ген директор ПАО “Газпром”.</address>
-      </div>
-      <input type="radio" name="reviews">
-      <input type="radio" name="reviews">
-      <input type="radio" name="reviews">
    </div>
    <div class="contacts__container">
       <h2>Мои контакты</h2>
-      <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo</P>
+      <div class="line"></div>
+      <P class="text__contacts">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo</P>
       <div class="contacts__item">
          <div class="contact">
-            <img src="#" alt="Геометка">
+            <img src="img/geo_195.png" alt="Геометка">
             <p>Санкт-Петербург <br>
                Невский проспект 11</p>
          </div>
          <div class="contact">
-            <img src="#" alt="Письмо">
+            <img src="img/konvert_196.png" alt="Письмо">
             <p>info@companyname.com</p>
          </div>
          <div class="contact">
-            <img src="#" alt="Трубка">
+            <img src="img/truba_197.png" alt="Трубка">
             <p>+7 999 999-99-99</p>
          </div>
       </div>
-      <h2>Отправьте мне сообщение</h2>
+      <h3>Отправьте мне сообщение</h3>
       <div class="message">
          <Form action="#">
-            <input type="text" name="text-input" value="" placeholder="Имя">
-            <input type="email"name="text-input" value="" placeholder="Email">
-            <textarea name="name1" id="1" cols="30" rows="10" placeholder="Сообщение"></textarea>
-            <input type="submit" value="Отправить">
+            <input id="name" type="text" name="text-input" value="" placeholder="Имя">
+            <input id="email" type="email"name="text-input" value="" placeholder="Email">
+            <br>
+            <textarea id="message__field" name="name1" id="1" cols="30" rows="10" placeholder="Сообщение"></textarea>
+            <br>
+            <input id="submit__message" type="submit" value="Отправить">
          </Form>
       </div>
       <div class="social-networks">
          <ul>
-            <li><a class="social-icons-fasebook" href="#" alt="fasebook">картинка</a></li>
-            <li><a class="social-icons-twitter" href="#" alt="twitter">картинка</a></li>
-            <li><a class="social-icons-dribbble" href="#" alt="dribbble">картинка</a></li>
-            <li><a class="social-icons-github" href="#" alt="github">картинка</a></li>
-            <li><a class="social-icons-instagram" href="#" alt="instagram">картинка</a></li>
-            <li><a class="social-icons-LinkedIn" href="#" alt="LinkedIn">картинка</a></li>
+            <li><a class="social-icons-fasebook" href="https://www.facebook.com/" alt="fasebook" target="_blank"></a></li>
+            <li><a class="social-icons-twitter" href="https://twitter.com/" alt="twitter" target="_blank"></a></li>
+            <li><a class="social-icons-dribbble" href="https://dribbble.com/" alt="dribbble" target="_blank"></a></li>
+            <li><a class="social-icons-github" href="https://github.com/" alt="github" target="_blank"></a></li>
+            <li><a class="social-icons-instagram" href="https://www.instagram.com/" alt="instagram" target="_blank"></a></li>
+            <li><a class="social-icons-LinkedIn" href="https://ru.linkedin.com/" alt="LinkedIn" target="_blank"></a></li>
          </ul>
       </div>
    </div>
