--- a/src/index.html
+++ b/src/index.html
@@ -16,25 +16,26 @@
          <div class="logo">Андрей Браун</div>
          <div class="menu">
             <ul>
-               <li>обо мне</li>
-               <li>услуги</li>
-               <li>кейсы</li>
-               <li>прайс</li>
-               <li>отзывы</li>
-               <li>контакты</li>
+               <li><a href="#">обо мне</a></li>
+               <li><a href="#">услуги</a></li>
+               <li><a href="#">кейсы</a></li>
+               <li><a href="#">прайс</a></li>
+               <li><a href="#">отзывы</a></li>
+               <li><a href="#">контакты</a></li>
             </ul>
          </div>
       </nav>
    </header>
-   <div class="main">
+   <main>
+   <section class="main">
       <div class="title__container">
          <h1>Привет <br>Я Андрей Браун</h1>
          <p>Фулл стек веб - разработчик и Android - разработчик</p>
-         <input type="submit" value="Обо мне">
-         <input type="submit" value="Мои работы">
+         <input type="button" id="submit1" value="Обо мне">
+         <input type="button" value="Мои работы">
       </div>
-   </div>
-   <div class="aboutme__container">
+   </section>
+   <section class="aboutme__container">
       <h2>Обо мне</h2>
       <div class="line"></div>
       <img class="aboutme__my-photo" src="img/foto_103.png" alt="Мое фото">
@@ -44,12 +45,12 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo
          nibh ante
          facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-      <div class="aboutme__submit">
+         <div class="aboutme__submit">
          <img src="img/ikonka_102.png" alt="*">
          <input type="submit" value="Скачать резюме">
       </div>
-   </div>
-   <div class="skills__container">
+   </section>
+   <section class="skills__container">
       <h2>Что я умею</h2>
       <div class="line"></div>
       <div class="skills__item">
@@ -82,8 +83,8 @@
                pellentesque natoque etiam.</p>
          </div>
       </div>
-   </div>
-   <div class="cases__container">
+   </section>
+   <section class="cases__container">
       <h2>Кейсы</h2>
       <div class="line"></div>
       <p class="cases__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante
@@ -109,8 +110,8 @@
          </div>
       </div>
       <input type="submit" value="Visit live site">
-   </div>
-   <div class="cost-calculation__container">
+   </section>
+   <section class="cost-calculation__container">
       <h2>Расчет стоимости</h2>
       <div class="type-site">
          <h3>Тип сайта</h3>
@@ -143,8 +144,8 @@
       <div class="cost">
          <p>Стоимость 0</p>
       </div>
-   </div>
-   <div class="statistics__container">
+   </section>
+   <section class="statistics__container">
       <h2>Немного статистики</h2>
       <div class="line"></div>
       <div class="stats">
@@ -169,8 +170,8 @@
             <p>Наград получено</p>
          </div>
       </div>
-   </div>
-   <div class="reviews__container">
+   </section>
+   <section class="reviews__container">
       <h2>Отзывы</h2>
       <div class="line"></div>
       <div class="reviews1">
@@ -180,14 +181,14 @@
             facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
          <address><span>Михаил</span>, Ген директор ПАО “Газпром”.</address>
       </div>
-   </div>
-   <div class="contacts__container">
+   </section>
+   <section class="contacts__container">
       <h2>Мои контакты</h2>
       <div class="line"></div>
       <P class="text__contacts">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo</P>
       <div class="contacts__item">
          <div class="contact">
-            <img src="img/geo_195.png" alt="Геометка">
+            <img id="geo" src="img/geo_195.png" alt="Геометка">
             <p>Санкт-Петербург <br>
                Невский проспект 11</p>
          </div>
@@ -221,10 +222,11 @@
             <li><a class="social-icons-LinkedIn" href="https://ru.linkedin.com/" alt="LinkedIn" target="_blank"></a></li>
          </ul>
       </div>
-   </div>
-   <div class="maps__conteiner">
+   </section>
+   <section class="maps__conteiner">
       <iframe src="" frameborder="0">Ваш браузер не поддерживает фреймы!</iframe>
-   </div>
+   </section>
+   </main>
    <footer>
       <div class="avtor__container">
          Copyright © 2021 Андрей Браун. Design by Web
