Добавлен калькулятор сайта

--- a/src/index.html
+++ b/src/index.html
@@ -304,5 +304,6 @@
 		$('.preloader').find('i').fadeOut().end().delay(400).fadeOut('slow');
 	});
 </script>
+<script src="js/myscript.js"></script>
 </body>
 </html>
